src/objects/Contract_Addendum__c.object
<CustomObject>
    <fields>
        <fullName>Addendum_Signed_Date__c</fullName>
        <label>Addendum Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addendum_Signed_by__c</fullName>
        <label>Addendum Signed by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Contract Addendums</relationshipLabel>
        <relationshipName>Contract_Addendums</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contract Addendum</label>
    <nameField>
        <displayFormat>Add-{00000}</displayFormat>
        <label>Contract Add Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Addendums</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>